--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -2,9 +2,12 @@
 	font-family: 'Roboto', sans-serif;
 }
 
-body{
+body {
+  width: 100%;
+  height: 100vh;
   background-image: url('../img/fondo.jpg');
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
 }
 
