--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,12 @@
+*::-webkit-scrollbar-thumb {
+  background-color: #f0141e;
+}
+
+*::-webkit-scrollbar {
+  width: 4px;
+  background: transparent;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   width: 100%;
@@ -74,7 +83,7 @@ input.form-control.form-control-sm::-moz-placeholder {
 #movies {
   height: 50vh;
   padding: 1em;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.6);
   overflow: auto;
 }
 
@@ -92,5 +101,9 @@ input.form-control.form-control-sm::-moz-placeholder {
 }
 
 .content img {
-  height: 300px;
+  height: 200px;
+}
+
+.content h2 {
+  font-size: 1em;
 }
