--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -21,24 +21,27 @@ h1{
 
 #img1 {
 	background-image: url(../img/Estreno1.jpg);
-	height:400px;
 	background-repeat: no-repeat;
+	background-position: center;
 	width: 100%;
+  	height: 400px;
 	
 }
 
 #img2 {
 	background-image: url(../img/Estreno2.jpg);
-	height:400px;
 	background-repeat: no-repeat;
+	background-position: center;
 	width: 100%;
+  	height: 400px;
 }
 
 #img3 {
 	background-image: url(../img/Estreno3.jpg);
-	height:400px;
 	background-repeat: no-repeat;
+	background-position: center;
 	width: 100%;
+  	height: 400px;
 }
 
 .navbar-inverse{
