--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -78,13 +78,16 @@ input.form-control.form-control-sm::-moz-placeholder {
 
 #movies-container {
   padding: 2em;
+  padding-right: 0;
 }
 
 #movies {
   height: 50vh;
   padding: 1em;
   background-color: rgba(255, 255, 255, 0.6);
+  box-shadow: 0px 0px 40px 40px rgba(255, 255, 255, 0.6);
   overflow: auto;
+  padding-bottom: 0;
 }
 
 .col-12 {
@@ -115,14 +118,19 @@ input.form-control.form-control-sm::-moz-placeholder {
 }
 
 #comics-info a {
+  font-size: 0.8em;
   color: #f0141e;
+}
+
+#comics-info a span {
+  width: 100px;
 }
 
 .description-comic {
   display: block;
 }
 
-#comics-info .col-md-4 {
+#comics-info .col-lg-4 {
   height: 200px;
   overflow: hidden;
   display: flex;
@@ -130,4 +138,19 @@ input.form-control.form-control-sm::-moz-placeholder {
   align-items: flex-end;
   text-align: center;
   line-height: 1.3;
+  margin-top: 0.5em;
+}
+
+.modal-poster {
+  width: 14em;
+}
+
+.p-plot {
+  margin-top: 1em;
+}
+
+@media (max-width: 992px) {
+  #modal .container-fluid {
+    display: flex;
+  }
 }
