--- a/Assets/css/main.css
+++ b/Assets/css/main.css
@@ -1,8 +1,9 @@
 * {
+  margin: 0;
 	font-family: 'Roboto', sans-serif;
 }
 
-body {
+.img-fluid {
   width: 100%;
   height: 100vh;
   background-image: url('../img/fondo.jpg');
@@ -11,45 +12,12 @@ body {
   background-repeat: no-repeat;
 }
 
-/* Carrousel  */
-
-h1{
-	color: white;
-}
-
-/* carousel container */
-
-#img1 {
-	background-image: url(../img/Estreno1.jpg);
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 100%;
-  height: 400px;
-	
-}
-
-#img2 {
-	background-image: url(../img/Estreno2.jpg);
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 100%;
-  	height: 400px;
-}
-
-#img3 {
-	background-image: url(../img/Estreno3.jpg);
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 100%;
-  	height: 400px;
-}
-
+/*NAVBAR*/
 .navbar-inverse{
-  background-color:#000;
+  background-color:#9A0000;
   position: sticky-top;
 }
 
-/*NAVBAR*/
 .navbar-brand{
   width:10%;
   height:8vh;
@@ -67,32 +35,204 @@ h1{
   border-color: #E91215;
 }
 
-/* menu accordion */
+/*MENU ACCORDION */
 .panel-body { padding:0px; }
 .panel-body table tr td { padding-left: 15px }
 .panel-body .table {margin-bottom: 0px; }
 
-/* fin de menu */
+/*CAROUSEL*/
 
+h1{
+	color: white;
+}
+
+/*Carousel Container */
+
+#img1 {
+	background-image: url(../img/Estreno1.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 100%;
+  height: 400px;
+
+}
+
+#img2 {
+	background-image: url(../img/Estreno2.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 100%;
+ height: 400px;
+}
+
+#img3 {
+	background-image: url(../img/Estreno3.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	width: 100%;
+ height: 400px;
+}
 
 .gl-star-rating[data-star-rating] .gl-star-rating-stars {
-    display: inline-block;
-    height: 26px;
-    vertical-align: middle;
-    cursor: pointer;
+  display: inline-block;
+  height: 26px;
+  vertical-align: middle;
+  cursor: pointer;
 }
 .gl-star-rating[data-star-rating] .gl-star-rating-text {
-    display: inline-block;
-    position: relative;
-    height: 26px;
-    line-height: 26px;
-    font-size: 0.8em;
-    font-weight: 600;
-    color: #fff;
-    background-color: #1a1a1a;
-    white-space: nowrap;
-    vertical-align: middle;
-    padding: 0 12px 0 6px;
-    margin: 0 0 0 12px;
+  display: inline-block;
+  position: relative;
+  height: 26px;
+  line-height: 26px;
+  font-size: 0.8em;
+  font-weight: 600;
+  color: #fff;
+  background-color: #1a1a1a;
+  white-space: nowrap;
+  vertical-align: middle;
+  padding: 0 12px 0 6px;
+  margin: 0 0 0 12px;
 }
 
+/*FOOTER*/
+.footer {
+  background: #9A0000 none repeat scroll 0 0;
+  margin: 0;
+  padding: 20px 0;
+  width: 100%;
+  height: 315px;
+
+
+}
+.footer_dv {
+  width: 100%;
+}
+
+.footer_dv h4 {
+  color: #fff;
+  font-weight: bold;
+  margin-bottom: 30px;
+  text-transform: uppercase;
+}
+.footer_dv ul {
+  list-style: outside none none;
+  margin: 0;
+  padding: 0;
+}
+.footer_dv ul li:first-child {
+  border-top: medium none;
+  box-shadow: none;
+}
+.footer_dv ul li {
+  color: #fff;
+  padding: 5px 0;
+}
+.footer_dv p {
+  color: #fff;
+  font-size: 14px;
+  line-height: 20px;
+  margin: 0 0 15px;
+  text-align: justify;
+}
+.a-font {
+  color: #fff!important;
+  text-decoration: none!important;
+
+}
+.copyright {
+  min-height: 79px;
+  background-color: #9A0000;
+}
+
+.copyright p {
+  text-align:left;
+  color:#FFF;
+  padding:10px 0;
+  margin-bottom:0px;
+}
+.heading7 {
+  font-size:21px;
+  font-weight:700;
+  color:#d9d6d6;
+  margin-bottom:22px;
+}
+.post p {
+  font-size:12px;
+  color:#FFF;
+  line-height:20px;
+}
+.post p span {
+  display:block;
+  color:#8f8f8f;
+}
+.bottom_ul {
+  list-style-type:none;
+  float: right;
+  margin-bottom: 0px;
+  padding-top: 22px;
+}
+.bottom_ul li {
+  float:left;
+  line-height:40px;
+}
+.bottom_ul li:after {
+  content:"";
+  color:#FFF;
+  margin-right:8px;
+  margin-left:8px;
+}
+.bottom_ul li a {
+  color:#FFF;
+}
+
+#copyright p, #copyright ul {
+  margin: 0;
+  font-size: 14px;
+  color: #fff;
+  text-align: center;
+}
+
+footer.site-footer ul {
+  padding-left: 0;
+  margin-bottom: 20px;
+  list-style: none;
+}
+
+@media (min-width: 768px){
+  .navbar-right {
+    float: right!important;
+    margin-right: -15px;
+  }
+}
+.list-inline>li {
+  display: inline-block;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+.list-inline {
+  padding-left: 0;
+  margin-left: -5px;
+  list-style: none;
+}
+.py-2 {
+  padding-top: 3rem!important;
+  padding-bottom: 3rem!important;
+}
+.bg-dark {
+  background-color: #9A0000!important;
+}
+
+#linkMarvel{
+  margin-top: 3em;
+  margin-left: 1em;
+}
+
+#iconRed{
+  display: flex;
+  margin-top: 1.5em;
+}
+
+.iconSocialMedia{
+  margin: 0.5em;
+  font-size: 2em;
+}
