--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  overflow-x: hidden;
 }
 
 /* nav.navbar {
@@ -85,8 +86,7 @@ input.form-control.form-control-sm::-moz-placeholder {
 }
 
 #movies {
-  min-height: 70vh;
-  max-height: 80vh;
+  min-height: 80vh;
   background-color: rgba(255, 255, 255, 0.6);
   /* box-shadow: 0px 0px 40px 40px rgba(255, 255, 255, 0.6); */
   overflow: auto;
@@ -307,12 +307,6 @@ footer.site-footer ul {
     list-style: none;
 }
 
-@media (min-width: 768px){
-    .navbar-right {
-        float: right!important;
-        margin-right: -15px;
-    }
-}
 .list-inline>li {
     display: inline-block;
     padding-right: 5px;
@@ -346,6 +340,18 @@ footer.site-footer ul {
   font-size: 2em;
 }
 
+.d-block {
+  height: 300px;
+  width: 100%;
+}
+
+#first-item {
+  background-image: url('../img/fondo.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 
 @media (max-width: 992px) {
   #modal .modal-body .container-fluid .col-lg-4, #modal .modal-body .container-fluid .col-lg-8  {
@@ -373,5 +379,12 @@ footer.site-footer ul {
   #social-net {
     display: flex;
     justify-content: center;
+  }
+}
+
+@media (min-width: 768px){
+  .navbar-right {
+    float: right!important;
+    margin-right: -15px;
   }
 }
