--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   width: 100%;
   /* height: 100vh; */
   /* background-image: url('../img/fondo.jpg'); */
@@ -30,7 +30,6 @@ body {
 }
 
 a.navbar-brand {
-  font-family: "Roboto Condensed", sans-serif;
   text-transform: uppercase;
 }
 
@@ -43,7 +42,6 @@ button.navbar-toggler.navbar-toggler-right {
 }
 
 button.btn.btn-outline-success.btn-sm {
-  font-family: "Roboto", sans-serif;
   color: #f0141e;
   border-color: #f0141e;
   margin-left: 1em;
@@ -62,19 +60,19 @@ input.form-control.form-control-sm {
 }
 
 input.form-control.form-control-sm::-webkit-input-placeholder {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 input.form-control.form-control-sm:-ms-input-placeholder {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 input.form-control.form-control-sm:-moz-placeholder {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 input.form-control.form-control-sm::-moz-placeholder {
-  font-family: "Roboto", sans-serif;  
+  font-family: "Roboto Condensed", sans-serif;  
 }
 
 #main-container {
@@ -87,7 +85,7 @@ input.form-control.form-control-sm::-moz-placeholder {
 
 #movies {
   min-height: 80vh;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: #E3E3E3;
   /* box-shadow: 0px 0px 40px 40px rgba(255, 255, 255, 0.6); */
   overflow: auto;
   padding-bottom: 0;
@@ -109,6 +107,7 @@ input.form-control.form-control-sm::-moz-placeholder {
 
 .content img {
   height: 200px;
+  border-radius: 5px;
 }
 
 .content h2 {
@@ -170,7 +169,6 @@ input.form-control.form-control-sm::-moz-placeholder {
 
 #sidebar .panel-title {
   width: 100%;
-  font-family: "Roboto Condensed", sans-serif;
   text-transform: uppercase;
   font-size: 1em;
   font-weight: 300;
@@ -187,6 +185,10 @@ input.form-control.form-control-sm::-moz-placeholder {
 #sidebar .panel-body {
   background-color: white;
   text-align: center;
+}
+
+#sidebar .panel-heading {
+  border-bottom: 1px solid white;
 }
 
 /*footer*/
@@ -379,6 +381,10 @@ footer.site-footer ul {
   #social-net {
     display: flex;
     justify-content: center;
+  }
+
+  .panel-title {
+    text-align: center;
   }
 }
 
