Añadiendole funcionalidad a los filtros

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -185,6 +185,7 @@ input.form-control.form-control-sm::-moz-placeholder {
 #sidebar .panel-body {
   background-color: white;
   text-align: center;
+  cursor: pointer;
 }
 
 #sidebar .panel-heading {
