--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -355,6 +355,11 @@ footer.site-footer ul {
   background-position: center;
 }
 
+.carousel-caption h3 {
+  -webkit-text-stroke: 1px black;
+  text-shadow: 1px 6px 12px white;
+}
+
 
 @media (max-width: 992px) {
   #modal .modal-body .container-fluid .col-lg-4, #modal .modal-body .container-fluid .col-lg-8  {
